--- a/GameShardsCore3/Resources/Languages/IT_it.resx
+++ b/GameShardsCore3/Resources/Languages/IT_it.resx
@@ -117,26 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="BronzeTrophy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Sprites\BronzeTrophy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="error_graph_structure" xml:space="preserve">
+    <value>Qualcosa è andato storto con la struttura del grafo</value>
   </data>
-  <data name="ChangeLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Changelog\ChangeLog.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;iso-8859-1</value>
+  <data name="index_must_be_from" xml:space="preserve">
+    <value>L'indice deve andare da</value>
   </data>
-  <data name="CopperTrophy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Sprites\CopperTrophy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="GoldTrophy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Sprites\GoldTrophy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="PlatinumTrophy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Sprites\PlatinumTrophy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SilverTrophy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Sprites\SilverTrophy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="UraniumTrophy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Sprites\UraniumTrophy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="to" xml:space="preserve">
+    <value>a</value>
   </data>
 </root>
