+ Added new functions in BellmanFordAlgorithm + Added PrimJarnik algorithm for graph + Added Breadth first algorithm for graph + Added Depth first search for graph + Added Tree<T> class, representing a general linked tree + Added more utility functions in ITree + Added more utility functions in AdjacencyMatrixGraph + Added AdaptableHeapPriorityQueue + Added PositionalList + Added IPriorityQueue + Added UnsortedPriorityQueue + Added SortedPriorityQueue + Started working on QueryParser + Added new alphabets and utility functions ° Reworked a lot of classes in Alphabets

--- a/GameShardsCore3/Resources/Changelog/ChangeLog.txt
+++ b/GameShardsCore3/Resources/Changelog/ChangeLog.txt
@@ -290,3 +290,19 @@ Dijkstra:
 °Changed, Removed and Improved some functions in the Color namespace, in order to improve performance and maintain consistency
 °Refactored a lot of code in multiple classes and moved classes in appropriate folders
 °Rewritten all the code in C#, to allow full compatibility with Unity3D
+-Removed Matrix Manipulation and operators (inlcuded in .NET framework libraries)
+-Removed SummationMultiplication classes (won't be part of the 3.x version of the library)
+-Removed GSRegEx (Will return under a different name)
+-Removed many other classes that will slowly return to the library
+
+
+
+^Version 3.1.0
++Added QLearning for reinforcement learning
++Added DataStructures (Trees, Graphs, List and more) and Algorithms to be performed on them (Dijkstra, Bellman-ford, DFS, BFS, and more)
+°Moved Dijkstra algorithm from AI.Pathfinding to Algorithms.DataStructures.Graph.SingleSourceShortestPath
+-Removed Pathfinding (moved to Algorithms)
+
+
+
+
